chore: show duration of adb install, code cleanup, update bitrise API docs
