# src/generated_api/models/V0OrganizationAppleAPICredentialResponseItem.ts
@@ -1,0 +1,113 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Bitrise API
+ * Official REST API for Bitrise.io
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: letsconnect@bitrise.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface V0OrganizationAppleAPICredentialResponseItem
+ */
+export interface V0OrganizationAppleAPICredentialResponseItem {
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    createdAt?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    isEnterpriseAccount?: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    issuerId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    keyId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    name?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    slug?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredentialResponseItem
+     */
+    updatedAt?: string;
+}
+
+/**
+ * Check if a given object implements the V0OrganizationAppleAPICredentialResponseItem interface.
+ */
+export function instanceOfV0OrganizationAppleAPICredentialResponseItem(value: object): value is V0OrganizationAppleAPICredentialResponseItem {
+    return true;
+}
+
+export function V0OrganizationAppleAPICredentialResponseItemFromJSON(json: any): V0OrganizationAppleAPICredentialResponseItem {
+    return V0OrganizationAppleAPICredentialResponseItemFromJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredentialResponseItemFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0OrganizationAppleAPICredentialResponseItem {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'createdAt': json['created_at'] == null ? undefined : json['created_at'],
+        'isEnterpriseAccount': json['is_enterprise_account'] == null ? undefined : json['is_enterprise_account'],
+        'issuerId': json['issuer_id'] == null ? undefined : json['issuer_id'],
+        'keyId': json['key_id'] == null ? undefined : json['key_id'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'slug': json['slug'] == null ? undefined : json['slug'],
+        'updatedAt': json['updated_at'] == null ? undefined : json['updated_at'],
+    };
+}
+
+export function V0OrganizationAppleAPICredentialResponseItemToJSON(json: any): V0OrganizationAppleAPICredentialResponseItem {
+    return V0OrganizationAppleAPICredentialResponseItemToJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredentialResponseItemToJSONTyped(value?: V0OrganizationAppleAPICredentialResponseItem | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'created_at': value['createdAt'],
+        'is_enterprise_account': value['isEnterpriseAccount'],
+        'issuer_id': value['issuerId'],
+        'key_id': value['keyId'],
+        'name': value['name'],
+        'slug': value['slug'],
+        'updated_at': value['updatedAt'],
+    };
+}
+
