# src/generated_api/models/V0OrganizationAppleAPICredetialCreateParams.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Bitrise API
+ * Official REST API for Bitrise.io
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: letsconnect@bitrise.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface V0OrganizationAppleAPICredetialCreateParams
+ */
+export interface V0OrganizationAppleAPICredetialCreateParams {
+    /**
+     * 
+     * @type {boolean}
+     * @memberof V0OrganizationAppleAPICredetialCreateParams
+     */
+    isEnterpriseAccount?: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateParams
+     */
+    issuerId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateParams
+     */
+    keyId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateParams
+     */
+    name?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateParams
+     */
+    privateKey?: string;
+}
+
+/**
+ * Check if a given object implements the V0OrganizationAppleAPICredetialCreateParams interface.
+ */
+export function instanceOfV0OrganizationAppleAPICredetialCreateParams(value: object): value is V0OrganizationAppleAPICredetialCreateParams {
+    return true;
+}
+
+export function V0OrganizationAppleAPICredetialCreateParamsFromJSON(json: any): V0OrganizationAppleAPICredetialCreateParams {
+    return V0OrganizationAppleAPICredetialCreateParamsFromJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredetialCreateParamsFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0OrganizationAppleAPICredetialCreateParams {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'isEnterpriseAccount': json['is_enterprise_account'] == null ? undefined : json['is_enterprise_account'],
+        'issuerId': json['issuer_id'] == null ? undefined : json['issuer_id'],
+        'keyId': json['key_id'] == null ? undefined : json['key_id'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'privateKey': json['private_key'] == null ? undefined : json['private_key'],
+    };
+}
+
+export function V0OrganizationAppleAPICredetialCreateParamsToJSON(json: any): V0OrganizationAppleAPICredetialCreateParams {
+    return V0OrganizationAppleAPICredetialCreateParamsToJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredetialCreateParamsToJSONTyped(value?: V0OrganizationAppleAPICredetialCreateParams | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'is_enterprise_account': value['isEnterpriseAccount'],
+        'issuer_id': value['issuerId'],
+        'key_id': value['keyId'],
+        'name': value['name'],
+        'private_key': value['privateKey'],
+    };
+}
+
