# src/generated_api/models/V0OrganizationAppleAPICredetialCreateResponseItem.ts
@@ -1,0 +1,105 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Bitrise API
+ * Official REST API for Bitrise.io
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: letsconnect@bitrise.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface V0OrganizationAppleAPICredetialCreateResponseItem
+ */
+export interface V0OrganizationAppleAPICredetialCreateResponseItem {
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    createdAt?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    isEnterpriseAccount?: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    issuerId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    keyId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    name?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationAppleAPICredetialCreateResponseItem
+     */
+    slug?: string;
+}
+
+/**
+ * Check if a given object implements the V0OrganizationAppleAPICredetialCreateResponseItem interface.
+ */
+export function instanceOfV0OrganizationAppleAPICredetialCreateResponseItem(value: object): value is V0OrganizationAppleAPICredetialCreateResponseItem {
+    return true;
+}
+
+export function V0OrganizationAppleAPICredetialCreateResponseItemFromJSON(json: any): V0OrganizationAppleAPICredetialCreateResponseItem {
+    return V0OrganizationAppleAPICredetialCreateResponseItemFromJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredetialCreateResponseItemFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0OrganizationAppleAPICredetialCreateResponseItem {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'createdAt': json['created_at'] == null ? undefined : json['created_at'],
+        'isEnterpriseAccount': json['is_enterprise_account'] == null ? undefined : json['is_enterprise_account'],
+        'issuerId': json['issuer_id'] == null ? undefined : json['issuer_id'],
+        'keyId': json['key_id'] == null ? undefined : json['key_id'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'slug': json['slug'] == null ? undefined : json['slug'],
+    };
+}
+
+export function V0OrganizationAppleAPICredetialCreateResponseItemToJSON(json: any): V0OrganizationAppleAPICredetialCreateResponseItem {
+    return V0OrganizationAppleAPICredetialCreateResponseItemToJSONTyped(json, false);
+}
+
+export function V0OrganizationAppleAPICredetialCreateResponseItemToJSONTyped(value?: V0OrganizationAppleAPICredetialCreateResponseItem | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'created_at': value['createdAt'],
+        'is_enterprise_account': value['isEnterpriseAccount'],
+        'issuer_id': value['issuerId'],
+        'key_id': value['keyId'],
+        'name': value['name'],
+        'slug': value['slug'],
+    };
+}
+
