# src/generated_api/models/V0OrganizationGoogleServiceCredetialCreateResponseItem.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Bitrise API
+ * Official REST API for Bitrise.io
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: letsconnect@bitrise.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface V0OrganizationGoogleServiceCredetialCreateResponseItem
+ */
+export interface V0OrganizationGoogleServiceCredetialCreateResponseItem {
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationGoogleServiceCredetialCreateResponseItem
+     */
+    createdAt?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationGoogleServiceCredetialCreateResponseItem
+     */
+    id?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0OrganizationGoogleServiceCredetialCreateResponseItem
+     */
+    name?: string;
+}
+
+/**
+ * Check if a given object implements the V0OrganizationGoogleServiceCredetialCreateResponseItem interface.
+ */
+export function instanceOfV0OrganizationGoogleServiceCredetialCreateResponseItem(value: object): value is V0OrganizationGoogleServiceCredetialCreateResponseItem {
+    return true;
+}
+
+export function V0OrganizationGoogleServiceCredetialCreateResponseItemFromJSON(json: any): V0OrganizationGoogleServiceCredetialCreateResponseItem {
+    return V0OrganizationGoogleServiceCredetialCreateResponseItemFromJSONTyped(json, false);
+}
+
+export function V0OrganizationGoogleServiceCredetialCreateResponseItemFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0OrganizationGoogleServiceCredetialCreateResponseItem {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'createdAt': json['created_at'] == null ? undefined : json['created_at'],
+        'id': json['id'] == null ? undefined : json['id'],
+        'name': json['name'] == null ? undefined : json['name'],
+    };
+}
+
+export function V0OrganizationGoogleServiceCredetialCreateResponseItemToJSON(json: any): V0OrganizationGoogleServiceCredetialCreateResponseItem {
+    return V0OrganizationGoogleServiceCredetialCreateResponseItemToJSONTyped(json, false);
+}
+
+export function V0OrganizationGoogleServiceCredetialCreateResponseItemToJSONTyped(value?: V0OrganizationGoogleServiceCredetialCreateResponseItem | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'created_at': value['createdAt'],
+        'id': value['id'],
+        'name': value['name'],
+    };
+}
+
